--- a/coronary.Rmd
+++ b/coronary.Rmd
@@ -125,60 +125,11 @@ Although the accuracy is better than 50-50, we only detect the event of interest
 
 ### Bayesian Belief Network
 
-We'll see if a BBN does any better.  First we need to specify or induce a graph for the network.  We'll give the Hill-Climbing (*hc*) algorithm some guidance; from our initial analysis we have reason to suspect that Proteins and M..Work have a significant impact on Pressure.
+We'll see if a BBN does any better.  First we need to specify or induce a graph for the network.  We'll start with an empty graph, and we're going to just configure the network to mimic Naive Bayes.
 
-```{r model-bbn-structure, echo=TRUE}
+```{r model-bbn-structure}
 
-bbn.structure <- hc(coronary_df,
-                    whitelist=data.frame(from=c("Proteins", "M..Work"), to=c("Pressure", "Pressure")))
-
-plot(bbn.structure)
-
-```
-
-We'll need to remove one edge from the network.  It doesn't make any sense that M..Work would influence family history, so we'll remove it.  Also, there was little evidence in our initial analysis that it directly influences Pressure.
-
-To make a judgement about what to do with the P..Work variable, we'll first examine it's relationship with smoking.
-
-```{r model-bnn-pwork-vs-smoke, results='asis', echo=FALSE}
-
-table(coronary_df$P..Work, coronary_df$Smoking) %>%
-  prop.table(margin=1) %>%
-  `*`(100) %>%
-  round(2) %>%
-  kable(caption="Physically Strenuous work (rows) vs. Tobacco Use (cols)") %>%
-  kable_styling() 
-
-
-```
-
-Looking at the diagonals gives us little reason to suspect correlation, so we'll remove it as well (although we could just be lazy and leave it alone, since it isn't impacting our Pressure prediction).  The final network structure is shown below.  This model should perform no differently than *Naive Bayes*, however the point of this exercise is to get acquainted with bnlearn.
-
-```{r model-bbn-structure2}
-
-# remove the connection between M..work and Family
-bbn.replaceidx <-  with(data.frame(bbn.structure$arcs), {
-  which(to == "Family" & from == "M..Work")})
-bbn.structure$arcs <- bbn.structure$arcs[-bbn.replaceidx, ]
-
-# remove connection between P..Work and Smoking
-bbn.replaceidx <-  with(data.frame(bbn.structure$arcs), {
-  which(to == "P..Work" & from == "Smoking")})
-bbn.structure$arcs <- bbn.structure$arcs[-bbn.replaceidx, ]
-
-# remove connection between P..Work and M..Work
-bbn.replaceidx <-  with(data.frame(bbn.structure$arcs), {
-  which(to == "P..Work" & from == "M..Work")})
-bbn.structure$arcs <- bbn.structure$arcs[-bbn.replaceidx, ]
-
-# remove connection between N..Work and Pressure
-bbn.replaceidx <-  with(data.frame(bbn.structure$arcs), {
-  which(to == "Pressure" & from == "M..Work")})
-bbn.structure$arcs <- bbn.structure$arcs[-bbn.replaceidx, ]
-
-# add connection for family and pressure
-bbn.structure$arcs <- rbind(bbn.structure$arcs, c("Family", "Pressure"))
-
+bbn.structure <- model2network("[Smoking][Family][P..Work][M..Work][Proteins][Pressure|Smoking:Family:P..Work:M..Work:Proteins]")
 plot(bbn.structure)
 
 ```
@@ -210,7 +161,7 @@ bbn.test.cm <- confusionMatrix(bbn.fit.test, coronary_df.test$Pressure)
 ```
 
 
-The below confusion matrices are shown as percentages.  In general, the models do no better than random chance.  The difference in predictive power is probably explainable by the lack of k-fold cross validation on the bayesian model.
+The below confusion matrices are shown as percentages.  In general, the models do no better than random chance.  The difference in predictive power is probably explainable by the lack of k-fold cross validation on the Bayesian model.
 
 * GLM: `r 100*round(lm.test.cm$overall[["Accuracy"]],2)`%
 * BBN: `r 100*round(bbn.test.cm$overall[["Accuracy"]],2)`%
@@ -233,6 +184,36 @@ bbn.test.cm$table %>%
 
 
 ```
+
+### Final Conclusions
+
+Given the large data set size, and the low dimensional (there are a maximum 32 (2^5) unique combinations in the data set), my hunch is that there is no sufficient "decision boundary" in the data, and Naive Bayes really is the best model.  This should be easy to verify by looking at the results of the model, and seeing if it aligns with the most common value in the training dataset.  In other words, we've identified the "best" fit, and it's a Naive Bayes (which we've replicated with the BNN).
+
+** Note: there are a handful of combinations that are a 50-50 split, which sporadically cause "NO" to show up in a handful of places.**
+
+```{r results-check}
+
+mode <- function(fctr){
+  fctr_levels <- levels(fctr)
+  fctr_levels[which.max(tabulate(fctr))]
+}
+
+check_data <- coronary_df.train
+check_data.predictions <- predict(bbn.fit, "Pressure", check_data, prob=TRUE)
+check_data <- cbind(check_data,  data.frame(PredictedPressure=check_data.predictions, PredictedProb=as.vector(attr(check_data.predictions, "prob"))))
+
+check_data %>% 
+  dplyr::select(Smoking, M..Work, P..Work, Proteins, Family, ActualPressure=Pressure, PredictedPressure) %>%
+  dplyr::group_by(Smoking, M..Work, P..Work, Proteins, Family) %>%
+  summarize(TrueMode=mode(ActualPressure), PredMode=mode(PredictedPressure)) %>%
+  mutate(`Same?` = if_else(TrueMode==PredMode, "YES", "NO")) %>%
+  kable() %>%
+  kable_styling()
+
+```
+
+
+
 
 
 
